<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/relativeScreen">

    <TextView
        android:id="@+id/streetAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_location_here"
        android:lines="2"
        android:textSize="18sp"
        android:background="@color/primary_dark"
        android:textColor="@color/primary_text"
        android:textAlignment="viewStart"
        android:textAllCaps="false" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity"
        android:layout_below="@+id/streetAddress" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/annotation_xhdpi"
        android:id="@+id/markerImage"
        android:contentDescription="@string/marker"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Próximo"
        android:textSize="12sp"
        android:theme="@style/CustomButton"
        android:layout_marginBottom="8dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp" />

</RelativeLayout>