<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".HomeActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary"
        android:fitsSystemWindows="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </android.support.v7.widget.Toolbar>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:id="@+id/logout"
        android:onClick="logout"
        android:theme="@style/CustomButton"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/EmailUser"
        android:textAlignment="viewStart"
        app:layout_constraintRight_toLeftOf="@+id/logout"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/primary_light"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintBottom_toBottomOf="@+id/logout"
        app:layout_constraintTop_toTopOf="@+id/logout" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscar"
        android:id="@+id/buscar"
        android:onClick="searchplate"
        android:maxWidth="36sp"
        android:theme="@style/CustomButton"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/textLayout3"
        app:layout_constraintHorizontal_bias="0.55"
        android:elevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/email_home"
        android:layout_marginBottom="24dp" />

    <Button
        android:text="@string/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cameraButton"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textLayout3"
        android:theme="@style/CustomButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar_e_mail"
        android:id="@+id/email_home"
        android:theme="@style/CustomButton"
        android:visibility="invisible"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textLayout3" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/statusmessage"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/accent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/cameraButton"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textLayout3"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColorHint="@color/accent"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <EditText
            android:layout_height="match_parent"
            android:id="@+id/plate"
            android:textSize="36sp"
            android:layout_marginTop="24dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:inputType="textCapCharacters"
            android:maxLength="7"
            android:layout_toStartOf="@+id/email_home"
            android:textColor="@color/primary_light"
            android:textColorHint="@color/primary_light"
            android:layout_width="252dp"
            android:hint="@string/abc0010" />
    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>
