<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EmailActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <TextView
        android:text="@string/confirmar_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/email_confirmation"
        android:textSize="36sp"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:textColor="@color/primary_light"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/bodyText"
        android:textSize="18sp"
        android:layout_width="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/photoImageView"
        android:layout_marginBottom="8dp"
        android:textColor="@color/primary_light"
        tools:layout_constraintBottom_creator="1" />

    <TextView
        android:text="@string/assunto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_marginStart="8dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        android:textColor="@color/primary_light" />

    <TextView
        android:text="@string/de"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_marginStart="8dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:textColor="@color/primary_light" />

    <TextView
        android:text="@string/para"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:textColor="@color/primary_light"
        android:layout_marginStart="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/destinationText"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/photoImageView"
        android:adjustViewBounds="true"
        android:maxWidth="100dp"
        android:maxHeight="100dp"
        android:scaleType="fitCenter"
        android:cropToPadding="true"
        android:contentDescription=""
        tools:ignore="ContentDescription"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/send_email"
        android:layout_marginEnd="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:layout_height="wrap_content"
        android:id="@+id/destinationText"
        android:textSize="18sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/fromText"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/email_confirmation"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/textView8"
        android:layout_width="0dp"
        android:textColor="@color/primary_light"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/fromText"
        android:textSize="18sp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/textView9"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/destinationText"
        android:textColor="@color/primary_light"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:layout_height="wrap_content"
        android:id="@+id/subText"
        android:textSize="18sp"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/textView10"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fromText"
        android:layout_marginTop="8dp"
        android:textColor="@color/primary_light"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:text="@string/enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/send_email"
        android:theme="@style/CustomButton"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp" />

</android.support.constraint.ConstraintLayout>