<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_gradient">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/button2"
        android:onClick="signin"
        android:theme="@style/CustomButton"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <android.support.design.widget.TextInputLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_alignParentStart="true"
    android:id="@+id/textInputLayout2"
    android:textColorHint="@color/accent"
    app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:hint="Senha"
        tools:ignore="HardcodedText"
        android:textColor="@color/primary_light"
        android:textColorHint="@color/primary_light"
        android:theme="@style/CustomEditText"
        android:maxLines="1"
        android:textSize="20sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
        android:layout_above="@+id/textInputLayout2"
    android:layout_alignParentStart="true"
    android:textColorHint="@color/accent"
    app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:id="@+id/textInputLayout">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:hint="@string/email"
        android:textColor="@color/primary_light"
        android:textColorHint="@color/primary_light"
        android:theme="@style/CustomEditText"
        android:maxLines="1"
        android:textSize="20sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="216dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
        <requestFocus />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:text="@string/azul_fiscal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        android:layout_marginBottom="16dp"
        android:textSize="48sp"
        android:textColor="@color/primary_text"
        android:textAlignment="center"
        android:typeface="sans"
        android:maxLines="1" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        app:srcCompat="@drawable/officer_xhdpi"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/officer_img"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        android:layout_marginBottom="8dp" />


</android.support.constraint.ConstraintLayout>
